// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my DataViewMobile component should render DataViewMobile  Component with props(snapshot) 1`] = `
<div
  className="DataViewMobile"
  data-testid="position"
>
  <img
    alt="ellipse"
    className="ellipse"
  />
  <img
    alt="vector"
    className="vector"
    src="Vector 10.png"
  />
  <div
    className="info__title"
  >
    Capital
  </div>
  <div
    className="info__content"
  >
    London
    <span
      style={
        Object {
          "marginLeft": "10px",
        }
      }
    />
  </div>
</div>
`;

exports[`my DataViewMobile component should render DataViewMobile  Component without props(snapshot) 1`] = `
<div
  className="DataViewMobile"
  data-testid="position"
>
  <img
    alt="ellipse"
    className="ellipse"
  />
  <img
    alt="vector"
    className="vector"
    src="Vector 10.png"
  />
  <div
    className="info__title"
  />
  <div
    className="info__content"
  >
    <span
      style={
        Object {
          "marginLeft": "10px",
        }
      }
    />
  </div>
</div>
`;
